# pokeroll

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api-pokemon.rs  lib.rs  main.rs  pokemon.rs
src/routes/: +page.svelte  AsciiSprite.svelte  ExpBar.svelte  ProfileRing.svelte  StatBar.svelte  StatHex.svelte
